syntax = "proto3";

package crud;

option go_package = "/proto/crudpb";

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateItemRequest {
  Item item = 1;
}

message CreateItemResponse {
  Item item = 1;
}

message ReadItemRequest {
  string id = 1;
}

message ReadItemResponse {
  Item item = 1;
}

message ReadAllItemsRequest {

}

message UpdateItemRequest {
  Item item = 1;
}

message UpdateItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  string id = 1;
}

service CRUDService {
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  rpc ReadItem(ReadItemRequest) returns (ReadItemResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
}